--- a/_config.yml
+++ b/_config.yml
@@ -18,12 +18,10 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Your awesome title
-email: your-email@example.com
+title: Morloi's Digital Dungeon
+email: morloil@morloi.org
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Mi occupo da troppo tempo di informatica, cultura digitale, internet e comunicazione. L’ho fatto spesso nel modo sbagliato, ma sbagliando si impara. Continuo a occuparmi di digitale, formazione e comunicazione, tentando di sbagliare meno.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
@@ -98,7 +96,7 @@ exclude:
 - LICENSE.md
 
 exclude: [vendor]
-
+Home: /
 Blog: /blog
 Life: /life
 
