prima importazione blog

--- a/_config.yml
+++ b/_config.yml
@@ -51,7 +51,8 @@ plugins:
 #   - vendor/cache/
 #   - vendor/gems/
 #   - vendor/ruby/
-
+favicon:
+  source: favicon.png
 
 plugins:
   - jekyll-redirect-from
